welcome.lessons.welcome.loopfor.LoopStairs.scala.error
Runner:9: error: illegal start of simple pattern
for (case <- 1 to 3) {
     ^Runner:13: error: '<-' expected but '}' found.
	}
        ^